Fixed Level Story Screen on mobile

--- a/app/sass/_level-story.scss
+++ b/app/sass/_level-story.scss
@@ -22,12 +22,11 @@
 	margin-right:9em;
 }
 
-#level-number {
+#level-story-number {
 	color: white;
 	font-size: 2em;
-	position:absolute;
 	bottom:0;
-	right:2em;
+	margin-right:2em;
 }
 
 #level-story-buttons a {
